changes in project.html

--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,7 @@
   <section class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap -mx-4 -mb-10 text-center">
+        <!--* Box starting -->
         <div class="sm:w-1/2 mb-10 px-4">
           <div class="rounded-lg h-64 overflow-hidden">
             <img alt="content" class="object-cover object-center h-full w-full" src="src/project/rollify.webp">
@@ -39,18 +40,25 @@
           <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Rollify - A multiplayer game</h2>
           <p class="leading-relaxed text-base"></p>
           <button onclick="window.open('https://ivinit.github.io/Rollify/')"
-            class="flex mx-auto mt-6 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded">Open</button>
+            class="grid-cols-2 mx-auto mr-8 ml-8 mt-6 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-700 rounded">Open</button>
+          <button onclick="window.open('https://github.com/ivinit/Rollify')"
+            class="grid-cols-2 mx-auto mr-8 ml-8 mt-6 text-white bg-gray-900 border-0 py-2 px-5 focus:outline-none hover:bg-gray-700 rounded">GitHub</button>
         </div>
+        <!--* Box starting -->
         <div class="sm:w-1/2 mb-10 px-4">
           <div class="rounded-lg h-64 overflow-hidden">
             <img alt="content" class="object-cover object-center h-full w-full" src="src/project/doshas.webp">
           </div>
           <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Deha Prakriti Finder</h2>
           <p class="leading-relaxed text-base"></p>
-          <button onclick="window.open('https://ivinit.github.io/DehaPrakriti/')"
-            class="flex mx-auto mt-6 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded">Open
-          </button>
+          <button onclick="window.open('https://ivinit.github.io/DehaPrakriti')"
+            class="grid-cols-2 mx-auto mr-8 ml-8 mt-6 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-700 rounded">Open</button>
+          <button onclick="window.open('https://github.com/ivinit/DehaPrakriti')"
+            class="grid-cols-2 mx-auto mr-8 ml-8 mt-6 text-white bg-gray-900 border-0 py-2 px-5 focus:outline-none hover:bg-gray-700 rounded">GitHub</button>
         </div>
+
+
+
       </div>
     </div>
   </section>
