--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div>
           <h1>Hello, <span></span></h1>
           <h1> I am <span></span></h1>
-          <h1>ViniT <span></span></h1>
+          <h1><i> ViniT</i> <span></span></h1>
         </div>
       </div>
 
